@@ -124,6 +124,7 @@ Gary S. Brown
 Oleg Broytmann
 Dave Brueck
 Francisco Martín Brugué
+Floris Bruynooghe
 Stan Bubrouski
 Erik de Bueger
 Dick Bulterman
